More improvements for Java 21
Future-proof for Java 21:

* Avoid deprecated URL constructor
* Use URI instead of String in some places to make it easier to create a
  URL when we need it
* Avoid Thread.getId (deprecated in Java 19), and just use the
  Thread.toString (which includes the thread name and the thread ID)
* Use URI.resolve to construct HDFS URLs in tests rather than String
  concatenation (must be used cautiously, due to HADOOP-19815, but still
  better than String concatenation)
* Avoid deprecated exec method for launching umask by removing
  unnecessary DFS config code (default behavior is sufficient for these)
* Put spotbugs and auto-service-annotations as optional compile time
  dependency for every module (simplifies POMs) to ensure consistent
  annotation processor execution

Also improve the build a bit more:

* Remove unused commons-vfs2-bom import dependency
* Improve concurrent delete test slightly to guarantee at least one
  classloader per thread, and make test pass when it creates fewer
  classloaders than we hope (it makes as many as it can in 10 seconds,
  but it might not make as many as the 50 it was previously expecting)